plugins {
    id 'base'
}

allprojects {
    group = mod_group_id
    version = mod_version

    repositories {
        mavenCentral()
        maven {
            url = 'https://maven.neoforged.net/releases'
        }
    }
}

subprojects {
    apply plugin: 'java-library'

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Javadoc).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.withType(ProcessResources).configureEach {
        filteringCharset = 'UTF-8'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }
}
